fieldx/tests/uncompilable/stable+serde,async-lock,clonable-lock/unused_reader.stderr
error: feature 'sync' is required
 --> tests/uncompilable/unused_reader.rs
  |
  | #[fxstruct(sync)]
  |            ^^^^

error[E0412]: cannot find type `TT` in this scope
 --> tests/uncompilable/unused_reader.rs
  |
  | impl TT {
  |      ^^ not found in this scope
